--- a/FE/Views/Shared/Modal/_ModalPartial.cshtml
+++ b/FE/Views/Shared/Modal/_ModalPartial.cshtml
@@ -30,7 +30,7 @@
              style="background-repeat: no-repeat;
                     background-size: cover;
                     background-position: center;
-                    filter: blur(8px) brightness(60%)">
+                    filter: blur(8px) brightness(60%); background-color: white">
         </div>
     </div>
 
