Hoàng Nhi - Bày tỏ cảm xúc cho tin nhắn
New features
- Bày tỏ cảm xúc
+ Tạo ReactionType lưu các icon và url của các kiểu biểu cảm
+ Render ra view
+ Tạo MessageReactions trong db để lưu lại biểu cảm
+ Hiển thị getlistpaging
+ Xử lý Update, Delete biểu cảm theo myreactionid
+ SignalR: ý tưởng ban đầu thay thế nguyển div chứa message
-> API xử lý CRUD -> Websocket xử lý Hiển thị
+ Hiển thị GetListPaging những user thể hiện cảm xúc

--- a/FE/Views/Home/Contact/GroupRequest/_TabGroupRequestPartial.cshtml
+++ b/FE/Views/Home/Contact/GroupRequest/_TabGroupRequestPartial.cshtml
@@ -188,9 +188,12 @@
                         // Popover hiển thị tên
                         if ($html.find('img[data-mdb-popover-init]').length > 0) {
                             const popoverTriggerList = $html.find('img[data-mdb-popover-init]')
+                            var option = {
+                                sanitize: false,
+                            }
                             const popoverList = [...popoverTriggerList].map(popoverTriggerEl => {
                                 const element = document.getElementById(popoverTriggerEl.id);
-                                return new mdb.Popover(element)
+                                return new mdb.Popover(element, option)
                             })
                         }
 
