--- a/FE/Views/Home/Contact/GroupRequest/_GroupRequestGetListPagingPartial.cshtml
+++ b/FE/Views/Home/Contact/GroupRequest/_GroupRequestGetListPagingPartial.cshtml
@@ -95,7 +95,7 @@
                          style="box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
                                 object-fit: cover"
                          data-mdb-popover-init
-                         data-mdb-content="@($"<div class='text-black px-2 py-1 bg-white' style='font-weight: 500'>{sender.HoVaTen}</div>")"
+                         data-mdb-content="@($"<div class='text-black px-2 py-1 bg-white' style='font-weight: 500; box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px; border-radius: 8px'>{sender.HoVaTen}</div>")"
                          data-mdb-trigger="hover"
                          data-mdb-html="true"
                          data-mdb-placement="top" />
