--- a/FE/Views/Shared/ConfigProfile/_ConfigProfilePopoverPartial.cshtml
+++ b/FE/Views/Shared/ConfigProfile/_ConfigProfilePopoverPartial.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="d-flex flex-column align-items-start py-2 px-1 bg-white" style="width: 274px">
+﻿<div class="d-flex flex-column align-items-start py-2 px-1 bg-white" 
+     style="width: 274px; box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px; border-radius: 8px; overflow: hidden">
     <button type="button"
             onclick="BtnPopover.toggle();showInforModal()"
             class="btn btn-link w-100 text-start text-black p-3"
