--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
             <partial name="_ValidationScriptsPartial" />
         }
 
-        <script>
+    <script>
         // Kết nối tới Hub SignalR từ API
         const connection = new signalR.HubConnectionBuilder()
                                     .withUrl('https://localhost:7181/messageHub?userid=@(User.Claims.FirstOrDefault(c => c.Type == "UserId").Value)') // URL API SignalR hub
@@ -463,7 +463,23 @@
             }
         });
 
-        </script>
+        // Hàm nhận yêu cầu cập nhật MessageReaction
+        connection.off("ReceiveRequestUpdateMessageReaction");
+        connection.on("ReceiveRequestUpdateMessageReaction", function (response)
+        {
+            if (!response.success) {
+                ShowThongBaoThatBai(response.message)
+            } else {
+                var TargetId = $("#TargetId").val()
+                var ConversationType = $("#ConversationType").val()
+
+                // Xử lý khi Tab Message đã được tải
+                if (TargetId === response.data.senderId || TargetId === response.data.targetId) {
+                    updateMessage(response.data.data, ConversationType)
+                }
+            }
+        });
+    </script>
 
         <script>
             // Chuyển giao diện nhắn tin với User hoặc nhóm
@@ -538,6 +554,8 @@
         </script>
 
         <script>
+            let htmlBtnReactionType = '';
+
             function scrollToBottom() {
                 const chatBox = document.getElementById("MessageWrapper");
                 chatBox.scrollTo({
@@ -583,7 +601,6 @@
                 }
             }
 
-
             function ShowResponseMessageContainer(id) {
                 var message = ChatContainer.querySelector(`div.Message_Content[data-messageid="${id}"]`)
                 if (message === null) return;
@@ -618,6 +635,198 @@
                 // Hiển thị container
                 ResponseMessageContainer.style.display = "none"
                 ResponseMessageContainer.innerHTML = ''
+            }
+
+            function toggleBtnReactionType(button) {
+                const instance = mdb.Popover.getInstance("#" + button.id);
+                if (instance == null) {
+                    // Lấy Reaction của mình
+                    const myReactionId = button.getAttribute("data-myreactiontypeid")
+
+                    if (htmlBtnReactionType === '') {
+                        $.ajax({
+                            url: '@Url.Action("GetListPaging", "ReactionType")',
+                            type: 'GET',
+                            data: {
+                                PageIndex: 1,
+                                RowPerPage: 6
+                            },
+                            success: function (data) {
+                                if (data.isSuccess !== undefined && !data.isSuccess) {
+                                    ShowThongBaoThatBai(data.message)
+                                } else {
+                                    // Khai báo biến
+                                    var $html = $("<div>").html(data)
+                                    var messageId = button.id.split("_")[2];
+
+                                    // Gán sự kiên onclick
+                                    $html.find("button.btnReactionType").each((index, element) => {
+                                        const reactiontypeId = element.getAttribute("data-reactiontypeId")
+                                        element.setAttribute("onclick", `handleMessageReaction('${messageId}', '${reactiontypeId}')`)
+                                        if (myReactionId === reactiontypeId) {
+                                            element.classList.add("active")
+                                        }
+                                    })
+
+                                    // Tạo option
+                                    var option = {
+                                        html: true,
+                                        content: $html[0].innerHTML,
+                                        sanitize: false,
+                                        trigger: "focus"
+                                    }
+
+                                    // Tạo Popover
+                                    var insPopover = new mdb.Popover(button, option)
+                                    insPopover.show()
+                                    htmlBtnReactionType = data
+                                }
+                            }
+                        })
+                    } else {
+                        // Khai báo biến
+                        var $html = $("<div>").html(htmlBtnReactionType)
+                        var messageId = button.id.split("_")[2];
+
+                        // Gán sự kiên onclick
+                        $html.find("button.btnReactionType").each((index, element) => {
+                            const reactiontypeId = element.getAttribute("data-reactiontypeId")
+                            element.setAttribute("onclick", `handleMessageReaction('${messageId}', '${reactiontypeId}')`)
+                            if (myReactionId === reactiontypeId) {
+                                element.classList.add("active")
+                            }
+                        })
+
+                        // Tạo option
+                        var option = {
+                            html: true,
+                            content: $html[0].innerHTML,
+                            sanitize: false,
+                            trigger: "focus"
+                        }
+
+                        // Tạo Popover
+                        var insPopover = new mdb.Popover(button, option)
+                        insPopover.show()
+                    }
+                }
+            }
+
+            // Xử lý CRUD MessageReaction
+            function handleMessageReaction(messageId, reactiontypeId) {
+                $.ajax({
+                    url: '@Url.Action("HandleRequest", "MessageReaction")',
+                    type: 'POST',
+                    data: {
+                        MessageId: messageId,
+                        ReactionTypeId: reactiontypeId,
+                        UserId: '@ViewContext.GetClaimValue("UserId")',
+                    },
+                    success: function (data) {
+                        if (data.isSuccess !== undefined && !data.isSuccess) {
+                            ShowThongBaoThatBai(data.message)
+                        } else {
+                            var WSRequest = {
+                                SenderId: "@ViewContext.GetClaimValue("UserId")",
+                                TargetId: $("#TargetId").val(),
+                                ConversationType: $("#ConversationType").val(),
+                                Reaction: data.data
+                            }
+                            // Gửi yêu cầu cập nhật Message
+                            connection.invoke("UpdateMessageReaction", JSON.stringify(WSRequest))
+                                .then(result => {
+                                    if (result.error) {
+                                        ShowThongBaoThatBai(result.message)
+                                    }
+                                })
+                                .catch(err => {
+                                    ShowThongBaoThatBai("Lỗi hệ thống: " + err)
+                                });
+                        }
+                    }
+                })
+            }
+
+            // Cập nhật Message
+            function updateMessage(data, conversationtype) {
+                $.ajax({
+                    url: "@Url.Action("GetMessageHtml", "Message")",
+                    type: "POST",
+                    data: {
+                        request: JSON.stringify(data),
+                        ConversationType: conversationtype
+                    },
+                    success: function (response) {
+                        if (response.isSuccess === undefined) {
+                            // Chuẩn bị dữ liệu
+                            const $html = $("<div>").html(response)
+                            var newMessageContent = $html[0].querySelector("div.Message_Content")
+                            var currentMessageContent = ChatContainer.querySelector(`div.Message_Content[data-messageid='${newMessageContent.getAttribute("data-messageid")}'`)
+                            // Cập nhật div mới
+                            currentMessageContent.innerHTML = newMessageContent.innerHTML
+                            // Cập nhật Popover
+                            var messageReactionDiv = currentMessageContent.querySelector("div.MessageReaction")
+                            if (messageReactionDiv !== null)
+                            {
+                                var option = {
+                                    trigger: "hover",
+                                    sanitize: false,
+                                    html: true,
+                                    content: "",
+                                    placement: "top",
+                                    delay: { "show": 200, "hide": 100 },
+                                }
+                                const div = document.createElement("div")
+                                div.style.backgroundColor = "#333"
+                                div.style.color = "#fff"
+                                div.style.boxShadow = "rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px"
+                                div.style.borderRadius = "8px"
+                                div.style.minWidth = "100px"
+                                div.style.maxWidth = "100px"
+                                div.style.padding = "4px 8px"
+                                div.style.fontSize = "12px"
+
+                                //var messageReaction = document.getElementById(element.id)
+                                div.innerHTML = messageReactionDiv.getAttribute("data-content-popover")
+                                option.content = div.outerHTML
+                                new mdb.Popover(messageReactionDiv, option)
+                            }
+                        } else {
+                            ShowThongBaoThatBai(response.message)
+                        }
+                    },
+                    error: function (xhr, error) {
+                        ShowThongBaoThatBai(error)
+                    }
+                })
+            }
+
+            function ShowPopupMessageReaction(div) {
+                const MessageId = div.id.split("_")[1];
+                const ReactionTypes = []
+                div.querySelectorAll("img.ReactionType").forEach(item => {
+                    var data = {
+                        Url: item.getAttribute("src"),
+                        Id: item.getAttribute("data-reactiontypeid")
+                    }
+                    ReactionTypes.push(data)
+                })
+
+                $.ajax({
+                    url: '@Url.Action("ShowPopupDetail", "MessageReaction")',
+                    type: 'GET',
+                    data: {
+                        MessageId: MessageId,
+                        ReactionTypesJSON: JSON.stringify(ReactionTypes),
+                    },
+                    success: function (data) {
+                        if (data.isSuccess !== undefined && !data.isSuccess) {
+                            ShowThongBaoThatBai(data.message)
+                        } else {
+                            ShowModal(data, "md")
+                        }
+                    }
+                })
             }
         </script>
 
