--- a/FE/wwwroot/css/site.css
+++ b/FE/wwwroot/css/site.css
@@ -199,10 +199,10 @@ body {
 }
 
 .popover {
-    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    box-shadow: unset;
     color: black;
     background-color: unset;
-    overflow: hidden
+    border: none
 }
 
 div{
@@ -393,4 +393,21 @@ input[type="search"]::-webkit-search-cancel-button {
         box-shadow: none;
         transform: scale(1);
     }
+}
+
+.btnReactionType {
+    padding: 3px;
+    outline: unset;
+    border: none;
+    background-color: unset;
+    border-radius: 8px
+}
+
+.btnReactionType.active {
+    background-color: var(--mdb-secondary)   
+}
+
+.btnReactionType:hover > img {
+    transform: scale(1.2) translateY(-2px);
+    transition: transform 0.4s ease
 }
